<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_address" />
        <item android:title="@string/nav_account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/nav_profile"
                    android:icon="@drawable/ic_profile"
                    />
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/nav_logout"
                    android:icon="@drawable/ic_logout"
                    />
            </menu>
        </item>
    </group>
</menu>